--- a/app/globals.css
+++ b/app/globals.css
@@ -6,14 +6,14 @@
   --foreground: #ffffff;
 }
 
-@theme inline {
+@theme {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-  /* --breakpoint-iphone-12-pro-max: 428px;
+  /* --font-sans: var(--font-geist-sans);
+  --font-mono: var(--font-geist-mono); */
+  --breakpoint-iphone-12-pro-max: 428px;
   --breakpoint-iphone-15-pro-max: 430px;
-  --breakpoint-pro-max: 428px; */
+  --breakpoint-pro-max: 428px;
   /* --font-serif: var(--font-instrument-serif); */
 }
 
